# apple-music-api

./: Cargo.toml  README.md
src/: auth.rs  client.rs  config.rs  error.rs  http.rs  lib.rs  main.rs  utils.rs
src/models/: catalog.rs  common.rs  library.rs  mod.rs  search.rs
tests/: integration_test.rs
