[package]
name = "apple-music-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client with rusttls
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT for developer tokens
jsonwebtoken = "8.0"

# Base64 encoding
base64 = "0.21"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.4"
urlencoding = "2.1"

# Error handling
thiserror = "1.0"

# Additional utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
derive_builder = "0.20.2"
pem = "3.0.5"
p256 = "0.13.2"
